[fix] Updated image gallery thumbnails alignment

--- a/packages/components-react/src/components/Gallery/Gallery.scss
+++ b/packages/components-react/src/components/Gallery/Gallery.scss
@@ -57,6 +57,9 @@
     bottom: 0;
     z-index: 5;
   }
+  .image-gallery-thumbnails-container {
+    text-align: left;
+  }
 }
 
 .image-gallery-thumbnails-wrapper {
